terraform-code/Terraform-code/amiga/security-groups.tf
resource "aws_security_group" "web-node" {
  name = "web-node"
  description = "Web Security Group"
  vpc_id      = "${aws_vpc.terra_vpc.id}"
tags {
    Name = "web-node"
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }    
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
